refactor: clean-up contents and themes

--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -33,9 +33,11 @@ $color-btn-text: $white;
 // STARFLEIT
 
 $starfleit: #642EFF;
-$starfleit-primary: #00ffd1;
-$starfleit-haze: #d4ceff;
-$starfleit-lighten: lighten($starfleit, 5%);
+$starfleit-primary: #80FFE8;
+$starfleit-haze: lighten($starfleit, 30%);
+$starfleit-lighten: lighten($starfleit, 10%);
+$starfleit-darken: darken($starfleit, 20%);
+$starfleit-primary-lighten: lighten($starfleit-primary, 20%);
 $primary: $starfleit-primary;
 
 // Options
@@ -228,30 +230,59 @@ body .docs-sidebar {
   border-right: 1px solid $starfleit-lighten;
 }
 
+body pre code {
+  scrollbar-width: thin;
+  scrollbar-color: $starfleit-primary transparent;
+}
+
+body pre code:hover {
+  scrollbar-width: thin;
+  scrollbar-color: $starfleit-primary transparent;
+}
+
+body pre code::-webkit-scrollbar-thumb {
+  background: $starfleit-primary;
+  border-radius: 30px;
+}
+
+body pre code::-webkit-scrollbar-thumb:hover {
+  background: $starfleit-primary;
+  border-radius: 30px;
+}
+
 body .docs-links,
 body .docs-toc {
   scrollbar-width: thin;
-  scrollbar-color: $starfleit;
+  scrollbar-color: $starfleit-primary transparent;
+}
+
+body .docs-links:hover,
+body .docs-toc:hover {
+  scrollbar-width: thin;
+  scrollbar-color: $starfleit-primary transparent;
 }
 
 body .docs-links::-webkit-scrollbar-track,
 body .docs-toc::-webkit-scrollbar-track {
-  background: $starfleit;
+  background: transparent;
 }
 
 body .docs-links::-webkit-scrollbar-thumb,
 body .docs-toc::-webkit-scrollbar-thumb {
-  background: $starfleit;
+  background: $starfleit-primary;
+  border-radius: 30px;
 }
 
 body .docs-links:hover::-webkit-scrollbar-thumb,
 body .docs-toc:hover::-webkit-scrollbar-thumb {
   background: $starfleit-primary;
+  border-radius: 30px;
 }
 
 body .docs-links::-webkit-scrollbar-thumb:hover,
 body .docs-toc::-webkit-scrollbar-thumb:hover {
   background: $starfleit-primary;
+  border-radius: 30px;
 }
 
 body .form-control.is-search {
@@ -261,6 +292,7 @@ body .form-control.is-search {
 body .card {
   background: $starfleit;
   color: $starfleit-primary;
+  border-color: $starfleit-lighten;
 }
 
 body code {
@@ -286,9 +318,38 @@ body .text-muted {
 }
 
 body .btn-toggle:before {
-  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280, 255, 209, 0.75%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%2380FFE8' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
 }
 
 body .alert-doks {
   background-color: $starfleit-haze;
+}
+
+body .alert-doks a {
+  color: $starfleit;
+}
+
+body .alert-doks a:hover {
+  color: $starfleit-darken;
+}
+
+
+body .alert-info {
+  background-color: $starfleit-primary-lighten;
+}
+
+body .alert-info a {
+  color: $starfleit;
+}
+
+body .alert-info a:hover {
+  color: $starfleit-darken;
+}
+
+body .alert-warning a {
+  color: $starfleit;
+}
+
+body .alert-warning a:hover {
+  color: $starfleit-darken;
 }
